--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -229,7 +229,7 @@
             {# <i class="nav-icon fa fa-cogs"></i> #}
             <i class="fa fa-list-alt nav-icon" aria-hidden="true"></i>
             <p>
-              Pages
+              {{app_name}}
               <i class="right fas fa-angle-left"></i>
             </p>
           </a>
