--- a/templates/main/article/_article.html.twig
+++ b/templates/main/article/_article.html.twig
@@ -3,9 +3,9 @@
     <div class="card-body">
         <div class="card-img-actions">
             {% for item in item.images|slice(0,1) %}
-            <img src="{{ asset('img/article/' ~ item.name )}}" class="card-img img-fluid" width="96" height="350" alt=""> 
+            <img src="{{ asset('img/article/' ~ item.name )}}" class="card-img img-fluid" width="" alt=""> 
             {% else %}
-            <img src="{{ asset('img/vide.png')}}" class="card-img img-fluid" alt="" width="96" height="350">
+            <img src="{{ asset('img/vide.png')}}" class="card-img img-fluid" alt="" width="96">
             {% endfor %}
         </div>
     </div>
